# myCode

./: 19_CasinoInterfaces.sol  CasinoClient.sol  CasinoOwner.sol  casino.py  casino.sol  castest.py  main.cpp  test-functions.cpp  test-task2.cpp  test-task3.cpp
lab1/: CMakeLists.txt  extra-functions.hpp  policy.hpp  tasks.cpp  tasks.hpp  test-policy.cpp  test-task1.cpp  test-task4.cpp
lab2/: CMakeLists.txt  base-types.hpp  circle.cpp  circle.hpp  composite-shape.cpp  composite-shape.hpp  main.cpp  rectangle.cpp  rectangle.hpp  shape.hpp  test-circle.cpp  test-composite-shape.cpp  test-main.cpp  test-rectangle.cpp
